# typecheck

./: .bazelrc  .gitignore  .gitmodules  BUILD  CMakeLists.txt  MODULE.bazel  README.md
.ci/: main.runtime
.github/: dependabot.yml
.github/workflows/: build.yml
cmake/: options.cmake
include/typecheck/: Constraint.hpp  ConstraintPass.hpp  Debug.hpp  FunctionDefinition.hpp  FunctionVar.hpp  GenericType.hpp  GenericTypeGenerator.hpp  KnownProtocolKind.hpp  LiteralProtocol.hpp  RawType.hpp  Type.hpp  TypeManager.hpp  TypeVar.hpp  constraint.hpp
include/typecheck/protocols/: ExpressibleByDoubleLiteral.hpp  ExpressibleByFloatLiteral.hpp  ExpressibleByIntegerLiteral.hpp
src/: ArrayFunctionReturn.test.cpp  CMakeLists.txt  ConstraintPass.cpp  Constraints.cpp  Constraints.test.cpp  Debug.cpp  FunctionDefinition.cpp  FunctionDefinition.test.cpp  FunctionVar.cpp  GenericType.cpp  GenericType.test.cpp  GenericTypeGenerator.cpp  KnownProtocolKind.cpp  RawType.cpp  RawType.test.cpp  Type.cpp  Type.test.cpp  TypeManager+Constraints.cpp  TypeManager.cpp  TypeManager.test.cpp  TypeVar.cpp  TypeVar.test.cpp  Utils.test.hpp  type.cpp
src/protocols/: CMakeLists.txt
