module(
    name = "typecheck",
    version = "1.0.0",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_apple", version = "4.3.2", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "3.3.0", repo_name = "build_bazel_rules_swift")

bazel_dep(name = "cpptest")
git_override(
    module_name = "cpptest",
    remote = "https://github.com/mratedca/cpptest.git",
    commit = "141c5af0f5d3373274d3e0719a0b08f1b43b076a")

bazel_dep(name = "coreservices")
git_override(
    module_name = "coreservices",
    remote = "https://github.com/mratedca/coreservices",
    commit = "222c7f252bd6cfc4f8c98331640990a10a499235")

bazel_dep(name = "cppnotstdlib")
git_override(
    module_name = "cppnotstdlib",
    remote = "https://github.com/mratedca/cppnotstdlib",
    commit = "50c810deb58cb31670bd75988f4f51780ba525a4")

bazel_dep(name = "fcpp")
git_override(
    module_name = "fcpp",
    remote = "https://github.com/mratedca/fcpp",
    commit = "5d202d1a60f06e107965d97df454948b04f24086")

bazel_dep(name = "constraint")
git_override(
    module_name = "constraint",
    remote = "https://github.com/mratedca/constraint",
    commit = "15f1be2c335c04b9284d3ea3fa4df362de7058d5")

bazel_dep(name = "fast_float", version = "8.0.2")

bazel_dep(name = "utf8proc", version = "2.11.0")
bazel_dep(name = "magic_enum", version = "0.9.7")

bazel_dep(name = "boost.algorithm", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.type_index", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.program_options", version = "1.89.0.bcr.2")

bazel_dep(name = "cereal", version = "1.3.2.bcr.3")
bazel_dep(name = "googletest", version = "1.17.0")
